<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">DumbotApp</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">dumbot@team7even.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Dumbbell strings-->
    <string name="title_analytics">Gym Analytics</string>
    <string name="storage_location">Storage Location: %1$s</string>
    <string name="current_stock">Currently Available: %1$d</string>
    <string name="total_stock">Total Stock: %1$d</string>
    <string name="weight">%1$s KG</string>
    <string name="dumbot">DumBot</string>
    <string name="text_change_station">Change Station</string>
    <string name="order">Order</string>
    <string name="available">AVAILABLE</string>
    <string name="unavailable">UNAVAILABLE</string>
    <string name="join_wait_queue">Join Wait Queue</string>
    <string name="wait_queue_info">0/%1$d dumbbells available\n %2$d requests in wait queue</string>
    <string name="available_dumbbells_info">%1$d/%2$d dumbbells available</string>
    <string name="title_weight_inventory">Weight Inventory</string>
    <string name="question_mark">\?</string>
    <string name="minutes">Minutes</string>
    <string name="set_timer">Pick timer length</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="title_active_session">Active Session Page</string>
    <string name="save">Save</string>
    <string name="item_storage_location">Storage Location %1$s</string>
    <string name="text_confirm_add_new_dumbbell">
        Are you sure you want to add %1$s kg dumbbells to your weight inventory?\n
        Adding a new weight type to your Weight Inventory implies that you are ready
        to allow a new class of dumbbell to be ordered by gym users and delivered by DumBots.\n
        If you are ready to allow up to %2$s people to order %1$s kg dumbbells, press Save to confirm.
    </string>
    <string name="confirm_edited_weight">Confirm Edited Weight</string>
    <string name="detail_edit_weight">
        Are you ready to save your edited weight inventory entry?\n
        Your new entry states you have %1$s pairs of
        %2$s kg dumbbells in storage location(s) %3$s.
        If this is correct, press Save to confirm.
    </string>
    <string name="detail_delete_weight">
        Are you sure you want to remove %1$skg weights from your inventory?
        Once it is removed, users will no longer be able to order this type of weight.
    </string>
    <string name="app_mode">%1$s Mode</string>
    <string name="workout_station">Workout Station: %1$s</string>
    <string name="view_current_workout_session">View Current Workout Session</string>
    <string name="current_session_time">Current Session Time - %1$d:%2$d</string>
    <string name="after_dumbbell_request">
        You have successfully ordered a pair of %1$s kg dumbbells. \n\n
        Would you like to go to your current workout session or order more dumbbells?
    </string>
    <string name="no_dumbbells_in_use">
        You currently have no dumbbells in use. Order dumbbells from the Order Dumbbells Section
    </string>
    <string name="dumbbell_being_delivered">This dumbbell is being delivered now</string>
    <string name="dumbbell_being_collected">Dumbbell is being collected now</string>
    <string name="current_dumbbell">You are currently using this dumbbell</string>
    <string name="more_info">More Info</string>
    <string name="dumbbell">%1$s dumbbell</string>
    <string name="cancel_dumbbell">Are you sure you would like to cancel %1$s of the %2$s dumbbell?</string>
    <string name="section_user">User Section</string>
    <string name="order_dumbbells">Order Dumbbells</string>
    <string name="current_workout_session">Current Workout Session</string>
    <string name="workout_timer">Stopwatch</string>
    <string name="switch_mode">Switch Mode</string>
    <string name="section_manager">Manager Section</string>
    <string name="analytics">Gym Analytics</string>
    <string name="dumbbell_inventory">Dumbbell Inventory</string>
    <string name="dumbot_overview">DumBot Status</string>
    <string name="app_settings">App Settings</string>
    <string name="idle">Idle</string>
    <string name="timer_format">%1$d:%2$s</string>
    <string name="reset_dumbot">Reset DumBot</string>
    <string name="emergency_stop">EMERGENCY STOP</string>
    <string name="number">#%1$d</string>
    <string name="manager_login">Manager Login</string>
    <string name="change_bench_number">Change bench number</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_detail">
        You do not have the permissions to enter this section. Please enter Manager Mode to use this feature.
    </string>
    <string name="not_in_queue">You currently are not in the queue to receive any dumbbells. Any queued dumbbells shall appear here.</string>
    <string name="confirm">Confirm</string>
    <string name="leaving_the_queue_cannot_be_undone">Leaving the queue cannot be undone</string>
    <string name="register_manager_account">Register Manager Account</string>
    <string name="first_time_log_in">First time logging in? \n Create your manager account here:</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="feeling_lost">FEELING LOST?</string>

    <string name="log_out">Log Out</string>
    <string name="dumbot_map">Change Gym Layout</string>
    <string name="message_delete_graph">
        Are you sure you want to delete your entire graph? This action will delete all nodes your map.\nYour DumBot system will not be able to function until you have built another graph for it to traverse,and no orders will be able to be made in that time.\n <b>This action cannot be undone.</b>\n Please re-authenticate to continue.
    </string>
    <string name="timer_stopped">Timer Stopped</string>
    <string name="weight_limit_reached">2 weight limit reached</string>
    <string name="return_dumbbell">Return Dumbbell</string>
    <string name="currently_have_dumbbell">You currently have this dumbbell.</string>
    <string name="leave_queue">Leave Queue</string>
    <string name="currently_in_wait_queue">Currently in wait queue.</string>
</resources>
